--- a/src/components/Template/Pages/About/About.scss
+++ b/src/components/Template/Pages/About/About.scss
@@ -28,6 +28,7 @@
 
 @media only screen and (max-width: 600px) {
 .about{
+    width:100%;
     height:100vh;
     padding:0;
     display:flex;
@@ -44,6 +45,7 @@
     height:auto;
 }
 &__descr{
+    width:85%;
     padding:0 10px; 
     font-size:15px;
 }
